# FDD-WE0-public

./: .gitignore  Nuclear_Central_Manager_Workshop.docx  README.md
workshop/: ARCHITECTURE.md  README.md  homework_description.txt  launch.py  pyproject.toml  requirements.txt  scenario.py
workshop/backend/: __init__.py  contracts.py  engine.py  loader.py  main.py
workshop/backend/datagen/: __init__.py  basin_gen.py  pump_gen.py
workshop/backend/parts/: __init__.py  part1_pump.py  part2_basin.py  part3_waste.py
workshop/backend/reference/: __init__.py  solution_part1.py  solution_part2.py  solution_part3.py
workshop/frontend/: index.html  package-lock.json  package.json  vite.config.js
workshop/frontend/src/: App.jsx  theme.css
workshop/frontend/src/api/: ws.js
workshop/frontend/src/components/: BasinPanel.jsx  DayClock.jsx  MeltdownScreen.jsx  MissionLog.jsx  PumpPanel.jsx  ReactorCore.jsx  WastePanel.jsx  charts.jsx
workshop/homework/: HW1_pump_cleaning_fitting_student.ipynb  HW2_basin_temperature_student.ipynb  HW3_clustering_waste_student.ipynb  requirements_block2.txt  requirements_block_basin.txt  requirements_hw_fitting.txt
workshop/homework/data/: hw3_waste.csv  outlier_report.csv  outlier_report_ransac.csv
workshop/homework/helpers/: basin_data.py  basin_lab.py  basin_viz.py  hw3_data.py
workshop/solutions/: README.md
workshop/tests/: README.md  _scenarios.py  run_scenarios.py
workshop/tests/scenarios/p1_bad/: solution_part1.py
workshop/tests/scenarios/p1_missing/: solution_part1.py
workshop/tests/scenarios/p2_bad/: solution_part2.py
(+36 files in other folders)
